--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-walkdir = "2"
+walkdir = "2.3.1"
 md5 = "0.7.0"
 rayon = "1.3.0"
 rust-crypto = "0.2.36"
+jwalk = "0.5.1"
+ignore = "0.4.16"
